# cardmon

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  cards.yaml  check.sh  llms.txt  pyproject.toml
.github/workflows/: ci.yml  monitor.yml
cardmon/: __init__.py  cli.py  config.py  fetcher.py  models.py  monitor.py  repository.py
cardmon/extractors/: __init__.py  amex.py  barclays.py  base.py  capital_one.py  chase.py  citi.py
cardmon/notifiers/: __init__.py  base.py  slack.py  webhook.py
tests/: test_extractors.py  test_fetcher.py  test_repository.py
tests/fixtures/: amex.html  capital_one.html  chase.html  citi.html  jetblue.html
